# rust-bitvmx-transaction-monitor

./: .env.example  .gitignore  .gitmodules  Cargo.toml  README.md  args.rs  bitvmx_data.json  bitvmx_instances.json  bitvmx_instances_example.json
.github/workflows/: local_test.yml  test.yml
bitcoin-tx-monitor/: .env.example  Cargo.toml  README.md  bitvmx_instances.json  test2.json
bitcoin-tx-monitor/src/: args.rs  bitvmx_store.rs  lib.rs  main.rs  monitor.rs  types.rs
bitcoin-tx-monitor/tests/: bitvmx_store_test.rs  monitor_test.rs
config/: development.yaml  monitor_config.yaml
data/: blocks.json
src/: args.rs  bitvmx_instances_example.rs  bitvmx_store.rs  config.rs  constants.rs  errors.rs  helper.rs  lib.rs  main.rs  monitor.rs  monitor_store.rs  rsk_helper.rs  settings.rs  store.rs  stores.rs  types.rs
src/stores/: bitcoin_store.rs  bitvmx_store.rs  operation_store.rs
tests/: address_test.rs  bitcoin_store_test.rs  bitvmx_store_test.rs  confirmation_trigger_monitor_test.rs  deactivate_monitor_test.rs  integration_test.rs  is_rsk_pegin_tx_test.rs  main_test.rs  monitor_address_test.rs  monitor_pegin_tx_test.rs  monitor_store_test.rs  monitor_test.rs  monitor_test.rs.disabled  multiple_monitor_test.rs  news_store_test.rs  output_pattern_test.rs  spending_utxo_trigger_test.rs  tx_news_test.rs
tests/utils/: mod.rs
