[package]
name = "bitvmx-transaction-monitor"
version = "0.1.1"
edition = "2021"
description = "Monitor"
keywords = ["bitcoin", "monitor"]
homepage = "https://github.com/FairgateLabs/rust-bitcoin-tx-monitor"
repository = "https://github.com/FairgateLabs/rust-bitcoin-tx-monitor"
readme = "README.md"


[dependencies]
bitcoin-indexer = { path = "../rust-bitcoin-indexer" }
bitvmx-settings = { path = "../rust-bitvmx-settings" }
rust-bitvmx-storage-backend = { path = "../rust-bitvmx-storage-backend" }
bitvmx-bitcoin-rpc = { path = "../rust-bitvmx-bitcoin-rpc" }
bitcoin = "0.32.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0.86"
thiserror = "1.0.63"
mockall = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
hex = "0.4"

[dev-dependencies]
bitcoind = { path = "../rust-bitcoind" }
bitcoincore-rpc = "0.19"
