[package]
name = "bitvmx-transaction-monitor"
version = "0.1.1"
edition = "2021"
description = "Monitor"
keywords = ["bitcoin", "monitor", "bitcoin transactions"]
repository = "https://github.com/fairgateLabs/rust-bitvmx-transaction-monitor"
readme = "README.md"
license = "MIT"
categories = ["cryptocurrency", "monitoring"]

[dependencies]
bitcoin-indexer = { git = "https://github.com/FairgateLabs/rust-bitcoin-indexer.git", branch = "v.0.0.1" }
bitvmx-settings = { git = "https://github.com/FairgateLabs/rust-bitvmx-settings.git", branch = "v.0.0.1" }
rust-bitvmx-storage-backend = { git = "https://github.com/FairgateLabs/rust-bitvmx-storage-backend.git", branch = "v.0.0.1" }
bitvmx-bitcoin-rpc = { git = "https://github.com/FairgateLabs/rust-bitvmx-bitcoin-rpc.git", branch = "v.0.0.1" }
bitcoin = "0.32.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0.86"
thiserror = "2.0.12"
mockall = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
hex = "0.4"

[dev-dependencies]
bitcoind = { git = "https://github.com/FairgateLabs/rust-bitcoind.git", branch = "v.0.0.1" }
bitcoincore-rpc = "0.19"
